<resources>
    <string name="app_name">AndriodCalculator</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="divideButton">/</string>
    <string name="addButton">+</string>
    <string name="multiplyButton">*</string>
    <string name="subtractionButton">-</string>
    <string name="equalsButton">=</string>
    <string name="clearButton">AC</string>
</resources>