<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/inputDisplay"
        android:layout_width="407dp"
        android:layout_height="173dp"
        android:layout_margin="8dp"
        android:fontFamily="sans-serif-black"
        android:gravity="end|bottom"
        android:text=""
        android:textAlignment="textEnd"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="408dp"
        android:layout_height="553dp"
        android:columnCount="4"
        android:rowCount="4"
        app:layout_constraintTop_toBottomOf="@id/inputDisplay"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="175dp">

        <Button
            android:id="@+id/numBtn7"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="#555"
            android:text="@string/button_7"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/numBtn8"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="#555"
            android:text="@string/button_8"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/numBtn9"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="#555"
            android:text="@string/button_9"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/divideBtn"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@color/yellow"
            android:text="@string/divideButton"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/numBtn4"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="#555"
            android:text="@string/button_4"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/numBtn5"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="#555"
            android:text="@string/button_5"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/numBtn6"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="#555"
            android:text="@string/button_6"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/multBtn"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="#f4e660"
            android:text="@string/multiplyButton"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/numBtn1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="#555"
            android:text="@string/button_1"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/numBtn2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="#555"
            android:text="@string/button_2"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/numBtn3"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="#555"
            android:text="@string/button_3"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/subtractBtn"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="#f4e660"
            android:text="@string/subtractionButton"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/clearBtn"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="#555"
            android:text="@string/clearButton"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/numBtn0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="#555"
            android:text="@string/button_0"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/equalsBtn"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="#555"
            android:text="@string/equalsButton"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/addBtn"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="#f4e660"
            android:text="@string/addButton"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>